s3-spoolss: prefix print$ path on driver file deletion

Driver file paths stored in the registry do not include the server path
prefix. delete_driver_files() incorrectly assumes such a prefix.

https://bugzilla.samba.org/show_bug.cgi?id=8697
(cherry picked from commit c14586647451a878fdc911ee4be699b3e6485b83)